# agora

./: .gitignore  .golangci.yml  .lefthook.yml  CHANGELOG.md  CONTRIBUTING.md  LOOP.md  README.md  SECURITY.md  TODO.md  VISION.md  agent.go  agent_test.go  config.go  config_test.go  go.mod  go.sum  loop.py  magefile.go  orchestrator.go  orchestrator_test.go  output.go  parity_test.go  pyproject.toml  transcript.go  transcript_test.go  types.go  types_test.go
.agentera/: DECISIONS.md  HEALTH.md  PLAN.md  PROGRESS.md  decisions.yaml  docs.yaml  health.yaml  output-inventory.yaml  plan.yaml  progress.yaml  session.yaml  vision.yaml
.agentera/archive/: PLAN-2026-05-04-auto-mode.md  PLAN-2026-05-04-cli-defaults-examples.md  PLAN-2026-05-04-merge-cleanup.md  PLAN-2026-05-04.md  plan-2026-05-05-global-settings-managed-transcript-store.yaml  plan-2026-05-07-transcript-show-and-slug-first-cli-ux.yaml  plan-2026-05-20.yaml  plan-2026-05-26-cast-display-metadata-cleanup.yaml  plan-2026-05-26-cli-render-and-ux-polish.yaml  plan-2026-05-26-consensus-mechanism-fixes.yaml  plan-2026-05-26-moderator-transformation.yaml  plan-2026-07-08-better-defaults-and-situational-awareness.yaml  (+1 more)
.github/workflows/: ci.yml
cmd/agora/: config_cmd.go  (+5 more)
examples/: code-review.yaml  ethical-debate.yaml  example-default.yaml  quick-sanity-check.yaml  research-stress-test.yaml  startup-validation.yaml
kumbaja/: __init__.py  agent.py  cli.py  config.py  orchestrator.py  output.py  synthesis.py  transcript.py  types.py
scripts/: e2e-rmux.sh
tests/: test_agent.py  test_config.py  test_transcript.py
(+55 files in other folders)
